Entered this year's planning

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8">
   <title>OWee 2024 - WIJ VAN DE BOLK ADVISEREN DE BOLK</title>
