--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>OWee 2024 - WIJ VAN DE BOLK ADVISEREN DE BOLK</title>
 
   <link rel="stylesheet" href="./style/index.css">
+  <link rel="icon" type="image/x-icon" href="./favicon.svg">
 
   <script src="./js/fittext.js" async></script>
   <script src="./js/include.js" async onload="includeHTML();"></script>
