Added multi-language support

--- a/public/html/en/main.html
+++ b/public/html/en/main.html
@@ -9,6 +9,10 @@
 <style>
   .content#main{
     padding-top: 6vh;
-    color: #245e8b;
+    color: #d7855f;
+	background-color: #245e8b;
+  }
+  .content#main::after{
+    background-image: linear-gradient(135deg, #245e8b 25%, transparent 25%), linear-gradient(225deg, #245e8b 25%, transparent 25%);
   }
 </style>
