--- a/public/html/en/sponsors.html
+++ b/public/html/en/sponsors.html
@@ -29,7 +29,8 @@
     background-color: #d7855f;
   }
   .content#sponsors::after{
-    background: none;
+    height: 0;
+	width: 0;
   }
 
   #sponsors table{
