--- a/public/html/nl/navbar.html
+++ b/public/html/nl/navbar.html
@@ -10,4 +10,6 @@
   <li><a href="#contact">CONTACT</a></li>
   <li><a href="https://website.debolk.nl">WEBSITE</a></li>
   <li><a href="https://website.debolk.nl/inschrijven" target="_blank">SCHRIJF JE IN!</a></li>
+  <li><button onclick="changeToLang('en');"><img src='./images/lang/en.svg'>ENGLISH</button></li>
 </ul>
+
