--- a/public/html/en/image-header.html
+++ b/public/html/en/image-header.html
@@ -23,7 +23,7 @@
   .content#image-header::after{
     left: 0;
     top: calc(100% - 4vh);
-    background-image: linear-gradient(315deg, #d7855f 25%, transparent 25%), linear-gradient(45deg, #d7855f 25%, transparent 25%);
+    background-image: linear-gradient(315deg, #245e8b 25%, transparent 25%), linear-gradient(45deg, #245e8b 25%, transparent 25%);
   }
 
 </style>
