--- a/public/html/en/quotes.html
+++ b/public/html/en/quotes.html
@@ -2,11 +2,11 @@
   <h1>QUOTES VAN LEDEN</h1>
   <h2>Waarom ben je bij de Bolk lid geworden?</h2>
 
-
-  <a class="prev" onclick="moveSlides(-5)">&#10094;</a>
   <div id="quotes-container">
-  </div>
+  <a class="prev" onclick="moveSlides(-5)">&#10094;</a>
   <a class="next" onclick="moveSlides(5)">&#10095;</a>
+  </div>
+  
 
 </div>
 
@@ -14,10 +14,10 @@
   .content#quotes{
     color: #245e8b;
     background-color: #d7855f;
-    height: 82vh;
-    width: 80vw;
-    padding-left: 10vw;
-    padding-right: 10vw;
+    width: 85vw;
+	max-width: 85vw;
+    padding-left: 7.5vw;
+    padding-right: 7.5vw;
   }
 
   .content#quotes::after{
@@ -29,23 +29,23 @@
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -22px;
+	height: fit-content;
     padding: 16px;
+	margin-top: -44px;
     color: white;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
     user-select: none;
+    border-radius: 3px;
   }
 
   .prev{
-    border-radius: 0 3px 3px 0;
-    left: 0;
+    left: -3.25vw;
   }
 
   .next{
-    right: 0;
-    border-radius: 3px 0 0 3px;
+    right: -3.25vw;
   }
 
   .prev:hover, .next:hover {
@@ -58,14 +58,18 @@
   }
 
   #quotes-container{
+	position: relative;
+	top: 0;
     display: flex;
     flex-direction: row;
+	height: fit-content;
+	padding-bottom: 2vh;
   }
 
   #quotes-container .quote{
     display: none;
-    width: 40%;
-    height: 52vh;
+    width: 64%;
+    height: 32rem;
     border-radius: 15px;
     border: 4px #245e8b solid;
     background-color: #245e8b;
