--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>OWee 2024 - WIJ VAN DE BOLK ADVISEREN DE BOLK</title>
+  <title>OWee 2024 - De Bolk</title>
 
   <link rel="stylesheet" href="./style/index.css">
   <link rel="icon" type="image/x-icon" href="./favicon.svg">
@@ -15,15 +15,16 @@
 </head>
 <body>
 
-  <include-html src="./html/navbar.html"></include-html>
-  <include-html src="./html/image-header.html"></include-html>
-  <include-html src="./html/main.html"></include-html>
-  <include-html src="./html/program.html"></include-html>
-  <include-html src="./html/sleepinn.html"></include-html>
-  <include-html src="./html/kmt.html"></include-html>
-  <include-html src="./html/quotes.html"></include-html>
-  <include-html src="./html/contact.html"></include-html>
-  <include-html src="./html/sponsors.html"></include-html>
+  <include-html src="navbar.html"></include-html>
+  <include-html src="image-header.html"></include-html>
+  <include-html src="main.html"></include-html>
+  <include-html src="association.html"></include-html>
+  <include-html src="program.html"></include-html>
+  <include-html src="sleepinn.html"></include-html>
+  <include-html src="kmt.html"></include-html>
+  <include-html src="quotes.html"></include-html>
+  <include-html src="contact.html"></include-html>
+  <include-html src="sponsors.html"></include-html>
 
 </body>
 
