Added english translations Moved language button to the right Added dropshadow on logo Changed favicon.svg

--- a/public/html/en/contact.html
+++ b/public/html/en/contact.html
@@ -13,7 +13,7 @@
 
       <td>
         <p>
-          Telefoon: <a href="tel:+31152126012">015 212 6012</a><br>
+          Phone: <a href="tel:+31152126012">015 212 6012</a><br>
           E-mail: <a class='right' href="mailto:owee@nieuwedelft.nl">owee@nieuwedelft.nl</a>
             <br>
             <a class='right' href="mailto:bestuur@nieuwedelft.nl">bestuur@nieuwedelft.nl</a>
