--- a/public/html/en/main.html
+++ b/public/html/en/main.html
@@ -1,9 +1,9 @@
 <div class="content" id="main">
-  <h1>BEN JIJ ER AL KLAAR VOOR?</h1>
-  <p>De OWee markeert het begin van een nieuwe periode in je leven: je studententijd. Maar hoe gaat jouw studentenleven eruit zien?</p>
-  <p>Op 18 t/m 22 augustus is Delft een groot feest, speciaal voor jou als eerstejaars. De OWee is jouw moment om jezelf opnieuw uit te vinden en te ontdekken wat er nu echt bij jou past.</p>
-  <p>De hele week organiseert de Bolk speciaal voor jou allerlei gave activiteiten, zodat je helemaal uit je Bolk kan gaan om jouw studietijd een onvergetelijke start te geven!</p>
-  <p>Benieuwd wat er allemaal te doen gaat zijn, en wat de Bolk allemaal te bieden heeft? Daar is deze website speciaal voor gebouwd! Kijk lekker rond, zet het in je agenda en kom langs tijdens de OWee!</p>
+  <h1>ARE YOU READY?</h1>
+  <p>The OWee marks the beginning of a new period in your life: your student days. But what does your student life look like?</p>
+  <p>On August 18th to the 22nd, Delft is a big party, especially for you as a first-year student. The OWee is your time to reinvent yourself and discover what really fits you.</p>
+  <p>The whole week the Bolk organises various cool activities specially for you, this way you can go all out to give your time in college an unforgettable start!</p>
+  <p>Curious what to do and what the Bolk has to offer? This website is especially built for that! Have a look around, mark the dates in your diary and visit us during the OWee.</p>
 </div>
 
 <style>
