--- a/public/html/en/navbar.html
+++ b/public/html/en/navbar.html
@@ -10,5 +10,5 @@
   <li><a href="#contact">CONTACT</a></li>
   <li><a href="https://website.debolk.nl">WEBSITE</a></li>
   <li><a href="https://website.debolk.nl/inschrijven" target="_blank">SIGN UP!</a></li>
-  <li><button onclick="changeToLang('nl');"><img src='./images/lang/nl.svg'>NEDERLANDS</button></li>
+  <li class="right"><button onclick="changeToLang('nl');"><img src='./images/lang/nl.svg'>NEDERLANDS</button></li>
 </ul>
