--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <include-html src="navbar.html"></include-html>
-  <include-html src="image-header.html"></include-html>
+  <include-html src="../nl/image-header.html"></include-html>
   <include-html src="main.html"></include-html>
   <include-html src="association.html"></include-html>
   <include-html src="program.html"></include-html>
