--- a/public/html/en/program.html
+++ b/public/html/en/program.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="./style/program.css">
 
-<div class="content" id="program"><h1>Programma</h1></div>
+<div class="content" id="program"><h1>PROGRAMME</h1></div>
