--- a/public/html/en/quotes.html
+++ b/public/html/en/quotes.html
@@ -1,12 +1,12 @@
 <div class="content" id="quotes">
-  <h1>QUOTES VAN LEDEN</h1>
-  <h2>Waarom ben je bij de Bolk lid geworden?</h2>
+  <h1>QUOTES OF MEMBERS</h1>
+  <h2>Why did you join the Bolk?</h2>
 
   <div id="quotes-container">
   <a class="prev" onclick="moveSlides(-5)">&#10094;</a>
   <a class="next" onclick="moveSlides(5)">&#10095;</a>
   </div>
-  
+
 
 </div>
 
