Mobile navbar added

--- a/public/html/en/main.html
+++ b/public/html/en/main.html
@@ -4,6 +4,8 @@
   <p>On August 18th to the 22nd, Delft is a big party, especially for you as a first-year student. The OWee is your time to reinvent yourself and discover what really fits you.</p>
   <p>The whole week the Bolk organises various cool activities specially for you, this way you can go all out to give your time in college an unforgettable start!</p>
   <p>Curious what to do and what the Bolk has to offer? This website is especially built for that! Have a look around, mark the dates in your diary and visit us during the OWee.</p>
+
+  <iframe src="https://www.youtube-nocookie.com/embed/wREcLhWeC7k?si=qyxbnqR8KZ_QxlZ5" title="OWee Theme" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 <style>
@@ -15,4 +17,8 @@
   .content#main::after{
     background-image: linear-gradient(135deg, #245e8b 25%, transparent 25%), linear-gradient(225deg, #245e8b 25%, transparent 25%);
   }
+  iframe{
+    width: 60vw;
+    height: 33.75vw;
+}
 </style>
