--- a/public/html/nl/main.html
+++ b/public/html/nl/main.html
@@ -4,6 +4,8 @@
   <p>Op 18 t/m 22 augustus is Delft een groot feest, speciaal voor jou als eerstejaars. De OWee is jouw moment om jezelf opnieuw uit te vinden en te ontdekken wat er nu echt bij jou past.</p>
   <p>De hele week organiseert de Bolk speciaal voor jou allerlei gave activiteiten, zodat je helemaal uit je Bolk kan gaan om jouw studietijd een onvergetelijke start te geven!</p>
   <p>Benieuwd wat er allemaal te doen gaat zijn, en wat de Bolk allemaal te bieden heeft? Daar is deze website speciaal voor gebouwd! Kijk lekker rond, zet het in je agenda en kom langs tijdens de OWee!</p>
+
+  <iframe src="https://www.youtube-nocookie.com/embed/wREcLhWeC7k?si=qyxbnqR8KZ_QxlZ5" title="OWee Thema" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
 <style>
@@ -14,5 +16,9 @@
   }
   .content#main::after{
     background-image: linear-gradient(135deg, #245e8b 25%, transparent 25%), linear-gradient(225deg, #245e8b 25%, transparent 25%);
+  }
+  iframe{
+    width: 60vw;
+    height: 33.75vw;
   }
 </style>
