--- a/public/html/nl/navbar.html
+++ b/public/html/nl/navbar.html
@@ -1,4 +1,27 @@
 <link rel="stylesheet" href="./style/navbar.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<ul id="navbar-mobile">
+
+  <li>
+    <a href="javascript:void(0);" class="icon" onclick="toggleNavbarMobile();">
+      <i class="fa fa-bars"></i>
+    </a>
+  </li>
+  <li><a href="#">OWEE 2024</a></li>
+  <div id="navlinks">
+    <li><a href="#association">VERENIGING</a></li>
+    <li><a href="#program">PROGRAMMA</a></li>
+    <li><a href="#sleepinn">SLEEP-INN</a></li>
+    <li><a href="#kmt">KMT</a></li>
+    <li><a href="#quotes">QUOTES</a></li>
+    <li><a href="#contact">CONTACT</a></li>
+    <li><a href="https://website.debolk.nl" target="_blank" >WEBSITE</a></li>
+    <li class="last"><a href="https://website.debolk.nl/inschrijven" target="_blank">SCHRIJF JE IN!</a></li>
+  </div>
+
+  <li class="right"><button onclick="changeToLang('en');"><img src='./images/lang/en.svg'>ENGLISH</button></li>
+</ul>
 
 <ul id="navbar">
   <li><a href="#">THUISCH</a></li>
