Full mobile support

--- a/public/html/en/navbar.html
+++ b/public/html/en/navbar.html
@@ -11,17 +11,17 @@
   </li>
   <li><a href="#">OWEE 2024</a></li>
   <div id="navlinks">
-    <li><a href="#association">VERENIGING</a></li>
-    <li><a href="#program">PROGRAMMA</a></li>
-    <li><a href="#sleepinn">SLEEP-INN</a></li>
-    <li><a href="#kmt">KMT</a></li>
-    <li><a href="#quotes">QUOTES</a></li>
-    <li><a href="#contact">CONTACT</a></li>
+    <li><a href="#association" onclick="toggleNavbarMobile();">VERENIGING</a></li>
+    <li><a href="#program" onclick="toggleNavbarMobile();">PROGRAMMA</a></li>
+    <li><a href="#sleepinn" onclick="toggleNavbarMobile();">SLEEP-INN</a></li>
+    <li><a href="#kmt" onclick="toggleNavbarMobile();">KMT</a></li>
+    <li><a href="#quotes" onclick="toggleNavbarMobile();">QUOTES</a></li>
+    <li><a href="#contact" onclick="toggleNavbarMobile();">CONTACT</a></li>
     <li><a href="https://website.debolk.nl" target="_blank" >WEBSITE</a></li>
     <li class="last"><a href="https://website.debolk.nl/inschrijven" target="_blank">SCHRIJF JE IN!</a></li>
   </div>
 
-  <li class="right"><button onclick="changeToLang('nl');"><img src='./images/lang/nl.svg'>NEDERLANDS</button></li>
+  <li class="right"><button onclick="changeToLang('nl');"><img src='./images/lang/nl.svg'></button></li>
 </ul>
 
 <ul id="navbar">
