--- a/public/html/nl/program.html
+++ b/public/html/nl/program.html
@@ -1,3 +1,5 @@
 <link rel="stylesheet" href="./style/program.css">
 
-<div class="content" id="program"><h1>Programma</h1></div>
+<div class="content" id="program"><h1>Programma</h1>
+  <div id="program-container"></div>
+</div>
