--- a/public/html/nl/quotes.html
+++ b/public/html/nl/quotes.html
@@ -69,6 +69,8 @@
   #quotes-container .quote {
     display: none;
     width: 64%;
+    max-width: 64%;
+    overflow: scroll;
     height: 32rem;
     border-radius: 15px;
     border: 4px #245e8b solid;
