--- a/public/html/en/quotes.html
+++ b/public/html/en/quotes.html
@@ -112,4 +112,17 @@
     from {opacity: 0.4}
     to {opacity: 1}
   }
+
+  @media only screen and (max-device-width: 640px){
+    #quotes-container .quote {
+      margin-left: 9%;
+      margin-right: 9%;
+      width: 82%;
+      max-width: 82%;
+    }
+
+    .prev, .next{
+      font-size: 82px;
+    }
+  }
 </style>
