Minor changes and fixes

--- a/public/html/en/quotes.html
+++ b/public/html/en/quotes.html
@@ -29,9 +29,9 @@
     position: absolute;
     top: 50%;
     width: auto;
-	height: fit-content;
+	  height: fit-content;
     padding: 16px;
-	margin-top: -44px;
+	  margin-top: -44px;
     color: white;
     font-weight: bold;
     font-size: 18px;
@@ -119,6 +119,7 @@
       margin-right: 9%;
       width: 82%;
       max-width: 82%;
+      overflow: scroll;
     }
 
     .prev, .next{
