--- a/public/html/nl/contact.html
+++ b/public/html/nl/contact.html
@@ -32,8 +32,8 @@
       </td>
 
       <td class="center">
-        <a href="https://nl.wikipedia.org/wiki/Delftse_Studentenvereniging_Nieuwe_Delft" target="_blank">
-          <img src="./images/wikipedia.svg" alt="Wikipedia">
+        <a href="https://wa.me/31152126012" target="_blank">
+          <img src="./images/whatsapp.svg" alt="WhatsApp">
         </a>
       </td>
     </tr>
