--- a/public/html/nl/sponsors.html
+++ b/public/html/nl/sponsors.html
@@ -18,6 +18,11 @@
           <img src="./images/sponsors/winenmore.svg" alt="Wine & More by Arjan">
         </a>
       </td>
+      <td>
+        <a href="https://www.lunatech.com/" target="_blank">
+          <img src="./images/sponsors/lunatech.png" alt="Lunatech">
+        </a>
+      </td>
     </tr>
   </table>
 
@@ -40,6 +45,13 @@
       <td>
         <a href="https://wineandmorebyarjan.nl/" target="_blank">
           <img src="./images/sponsors/winenmore.svg" alt="Wine & More by Arjan">
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <a href="https://www.lunatech.com/" target="_blank">
+          <img src="./images/sponsors/lunatech.png" alt="Lunatech">
         </a>
       </td>
     </tr>
