Fix logo background x position on mobile

--- a/public/html/image-header.html
+++ b/public/html/image-header.html
@@ -34,4 +34,10 @@
     background-image: linear-gradient(315deg, #245e8b 25%, transparent 25%), linear-gradient(45deg, #245e8b 25%, transparent 25%);
   }
 
+  @media only screen and (max-device-width: 640px) {
+    .largelogo {
+      background-position-x: 50%;
+    }
+  }
+
 </style>
